docs: AGENTS.md と README.md の内容を更新し、プロジェクトの概要、機能、ビルド手順を明確化 docs: skills/README.md を英語に翻訳し、CLI JAR のビルドとインストール手順を整理